Final text & presenatation v2

--- a/text/Universiade/presentation.tex
+++ b/text/Universiade/presentation.tex
@@ -31,32 +31,35 @@
 \maketitle
 
 \begin{frame}\frametitle{Введение}
-	Задача состоит в синтезе изображений среды, которые будут содержать в себе тренд, т.е. изменение некоторой статистической характеристики. Такими трендами могут быть, например, изменение интенсивности появления частиц среды вдоль изображения, или изменение пористости среды. \\
+	Цель работы состоит в построении процедуры синтеза изображений среды, которые будут содержать в себе тренд. Под текстурой с трендом понимается изображение, в котором есть изменение некоторой статистической характеристики вдоль одного из направлений. Такими характеристиками, например, могут быть изменение интенсивности появления частиц среды или изменение пористости среды. \\
 	\begin{figure}
 		\centering{\includegraphics[width=0.35\linewidth]{trend-sample}}
-		\caption{Пример текстуры с трендом интенсивности частиц}
+		\caption{Пример текстуры с трендом интенсивности частиц.}
+		\label{trend-example}
 	\end{figure}
 \end{frame}
 
 \begin{frame}\frametitle{Математическая постановка}
-	С математической точки зрения, задача сводится к синтезу случайного изображения $X'$ (и построению соотвествующей процедуры синтеза), принадлежащему распределению, близкому к желаемому:
-	$$ P_{X'} \approx P_X,$$
-	где $P_X$ - распределение изображений с трендами, удовлетворяющих следующим ограничениям (для упрощения задачи):
+	Рассмотрим многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$. Обучающая выборка изображений с трендами $D = \{x_i\}$ задает в этом пространстве вероятностное распределение $P_X$, такое, что точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - низкую. Тогда с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $x'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
+	$$ P_{X'} \approx P_X, \quad x' \sim X'$$
+\end{frame}
+
+\begin{frame}\frametitle{Математическая постановка}
+	Для упрощения задачи, сузим множество изображений с трендами до множества изображений, удовлетворяющих следующим ограничениям:
 	\begin{itemize}
 		\item Это монохромные изображения 256 x 256 пикселей
 		\item Изменяющимся свойством является интенсивность появления частиц $\lambda$
 		\item Тренд является линейным и направлен вдоль оси x: 
 		$ \lambda = \lambda_0 + kx $
 	\end{itemize}
-	Распределение $P_X$ задается обучающей выборкой.
 \end{frame}
 
-\begin{frame}\frametitle{Существующие подходы к решению задачи}
+\begin{frame}\frametitle{Существующие подходы к синтезу}
 	Есть несколько подходов к решению задач подобного рода:
 	\begin{itemize}
 		\item 'Классический' статистический подход
 		\item Базовый нейросетевой подход
-		\item Генеративные состязательные сети (GAN)
+		\item Генеративные состязательные сети (Generative Adversarial Networks - GAN)
 	\end{itemize}
 \end{frame}
 
@@ -66,7 +69,7 @@
 		\item Параметры $\theta$ находятся из обучающей выборки:
 		$$ \mathcal{L}_{\theta}(D) = \prod_{x \in D} P_{\theta}(x) $$
 		$$ \theta^{*} = \underset{\theta}{\arg\max} \mathcal{L}_{\theta}(D)$$
-		\item Генерируется семпл из $ P_{\theta^{*}}$
+		\item Генерируется объект(изображение) из $ P_{\theta^{*}}$
 	\end{itemize}
 	Этот подход приводит к проблемам:
 	\begin{itemize}
@@ -83,33 +86,32 @@
 			\item Вводятся скрытые переменные $V$ и функция(нейросеть) для получения $x$ из $V$ (фактически, классификация, развернутая в другую сторону)
 		\end{itemize}
 		\item Определяются параметры распределения (т.е. обучение нейросети)
-		\item Генерируются семплы из $ P_{\theta^{*}}$
+		\item Генерируется объект(изображение) из $ P_{\theta^{*}}$
 	\end{itemize}
-	Этот подход возможен, однако на практике трудноосуществим.
+	Этот подход возможен, однако на практике трудноосуществим или не приводит к хорошему качеству генерации.
 \end{frame}
 
 \begin{frame}\frametitle{GAN}
-	Изначальная задача: найти процеруду генерирования $X'$ так, чтобы $ P_{X'} \approx P_X$.
-	Переформулируем:
-	$$ \rho(P_{X'}, P_X) \longrightarrow \underset{P_{X'}}{\min} $$
+	Архитектура GAN была придумана в 2014 году специально для решения задачи генерации объектов из сложных распределений. \\
 	\begin{itemize}
-		\item Введем некоторые скрытые переменные с фиксированным распределением, например
-		$$ V \sim U^n [-1, 1] $$
-		\item и параметризированную процедуру генерации:
-		$$ X' = g_{\theta}(V) $$
+		\item Переформулируем изначальную задачу нахождения такой процеруды генерирования $X'$, чтобы $ P_{X'} \approx P_X$:
+		$$ \rho(P_{X'}, P_X) \longrightarrow \underset{P_{X'}}{\min} $$
+		\item Введем параметризированную процедуру генерации:
+		$$ X' = g_{\theta}(\cdot) $$
+		\item Переформулируем:
+		$$ \rho(P_{X'}, P_X) \longrightarrow \underset{P_{X'}}{\min} $$
+		$$ \rho(g_{\theta}(\cdot), P_X) \longrightarrow \underset{g_{\theta}(\cdot)}{\min} $$
+		$$ \rho(g_{\theta}(\cdot), P_X) \longrightarrow \underset{\theta}{\min} $$
 	\end{itemize}
-	Переформулируем:
-	$$ \rho(P_{X'}, P_X) \longrightarrow \underset{P_{X'}}{\min} $$
-	$$ \rho(g_{\theta}(V), P_X) \longrightarrow \underset{g_{\theta}(V)}{\min} $$
-	$$ \rho(g_{\theta}(V), P_X) \longrightarrow \underset{\theta}{\min} $$
+	
 \end{frame}
 
 \begin{frame}\frametitle{GAN}
 	Возникает вопрос: что использовать в качестве метрики похожести двух распределений $\rho$, где одно из распределений задано обучающей выборкой.
 	\begin{itemize}
-		\item В качестве такой метрики можно использовать loss-функцию обученного классификатора:
-		$$ \rho(P_{X'}, P_X) \longrightarrow \min \Leftrightarrow \mathcal{L} \longrightarrow \max, $$
-		где $\mathcal{L}$ - функция потерь обученного классификатора.
+		\item В качестве такой метрики можно использовать функцию потерь обученного классификатора, потому что естественно предположить, что чем чаще ошибается обученный классификатор, тем больше одно распределение похоже на другое:
+		$$ \rho(P_{X'}, P_X) \longrightarrow \min \Leftrightarrow L \longrightarrow \max, $$
+		где $L$ - функция потерь обученного классификатора.
 	\end{itemize}
 \end{frame}
 
@@ -118,24 +120,19 @@
 		\item Введем две нейросети:
 		\begin{itemize}
 			\item $d_{\zeta}(x)$ - классификатор для измерения расстояния, \textbf{дискриминатор}
-			\item $g_{\theta}(x)$ - сеть, трансформирующая $V$ в $X'$, \textbf{генератор}
+			\item $g_{\theta}(x)$ - сеть, трансформирующая шум в $X'$, \textbf{генератор}
 		\end{itemize}
-		Суть использования двух сетей состоит в том, что они обучаются совместно, конкурируя друг с другом: генератор пытается имитировать целевое распределение, а дискриминатор пытается отличить сгенерированные изображения от реальных из обучающей выборки.
-		\item Введем loss-функцию дискриминатора(например, logloss):
-		$$ L(X, X') = \frac{1}{2} \mathbb{E}_{x \sim X} l(d_{\zeta}(x), 1) + \frac{1}{2} \mathbb{E}_{x' \sim X'} l(d_{\zeta}(x'), 0) = $$
-		 $$ = -\frac{1}{2} (\mathbb{E}_{x \sim X} \log d_{\zeta}(x) + \mathbb{E}_{x' \sim X'} \log (1 - d_{\zeta}(x'))) = $$
-		 $$ =  -\frac{1}{2} (\mathbb{E}_{x \sim X} \log d_{\zeta}(x) + \mathbb{E}_{v \sim V} \log (1 - d_{\zeta}(g_{\theta}(v)))) = $$
-		 $$ = L(\zeta, \theta) $$
 	\end{itemize}
+	Суть использования двух сетей состоит в том, что они обучаются совместно, конкурируя друг с другом: генератор пытается имитировать целевое распределение, а дискриминатор пытается классифицировать поступающие от генератора и из обучающей выборки изображения на 2 класса: реальные (из изначального распределения $P_X$) и ложные (из $P_{X'}$, т.е. произведенные генератором).
 \end{frame}
 
 \begin{frame}{GAN}
 	\begin{itemize}
-		\item Loss-функция обученного классификатора:
+		\item Функция потерь обученного классификатора:
 		$$ L^*(\theta) = \underset{\zeta}{\min} L(\zeta, \theta) $$
 		\item Соответственно,
-		 $$ \underset{\zeta}{\min} L(\zeta, \theta) \longrightarrow \underset{\theta}{\max} $$
-		 $$ \theta^* = \underset{\theta}{\arg\max} \left[ \underset{\zeta}{\min} L(\zeta, \theta) \right] $$
+		$$ \underset{\zeta}{\min} L(\zeta, \theta) \longrightarrow \underset{\theta}{\max} $$
+		$$ \theta^* = \underset{\theta}{\arg\max} \left[ \underset{\zeta}{\min} L(\zeta, \theta) \right] $$
 		 \item Определим оптимальный дискриминатор:
 		 $$ d^*_{\theta} = d_{\zeta^*(\theta)} $$
 		 $$ \zeta^*(\theta) =  \underset{\zeta}{\arg\min} L(\zeta, \theta)$$
@@ -143,7 +140,7 @@
 \end{frame}
 
 \begin{frame}\frametitle{Обучение GAN}
-	В итоге, процесс обучения принимает следующий вид:
+	Таким образом, процесс обучения сети типа GAN принимает следующий вид:
 	\begin{columns}
 		\column{0.5\linewidth}
 			\begin{center}
@@ -155,20 +152,29 @@
 			\end{center}
 		\column{0.5\linewidth}
 			\begin{figure}
-				\centering{\includegraphics[width=0.8\linewidth]{gan-training}}
-				\caption{Схематическое изображение процесса обучения GAN}
+				\centering{\includegraphics[width=0.85\linewidth]{gan-training}}
+				\caption{Схематическое изображение процесса обучения GAN.}
+				\label{gan-train}
 			\end{figure}
 	\end{columns}
 \end{frame}
 
 \begin{frame}\frametitle{pix2pix GAN}
-	Для решения задачи было попробовано применить модификацию GAN-сети под названием "pix2pix GAN". Общий функционал потерь для pix2pix GAN выглядит следующим образом: $$ \mathcal{L}(G, D) = \mathcal{L}_{adv}(G, D) + \eta \mathbb{E}_{s_1, s_2, r \sim p_{data}(s_1, s_2, r)} (\parallel r - G(s_1, s_2) \parallel_1)$$
-	$$ \mathcal{L}_{adv}(G, D) = \mathbb{E}_{s_1, s_2, r \sim p_{data}(s_1, s_2, r)}\log D(s_1, s_2, r) + $$ $$ + \mathbb{E}_{s_1, s_2 \sim p_{data}(s_1, s_2)} \log (1 - D(s_1, s_2, G(s_1, s_2)))$$
-	где G, D - генератор и дискриминатор, $(s_1, s_2, r)$ - тройка изображений (интенсивность слева, справа и реальное изображение с трендом),  $\mathbb{E}_{s_1, s_2, r \sim p_{data}(s_1, s_2, r)}$ - мат. ожидание логарифмического правдоподобия того, что тройка изображений $(s_1, s_2, r)$ принадлежит вероятностному распределению реальных троек $p_{data}(s_1, s_2, r)$, а $p_{data}(s_1, s_2)$ соответствует распределению реальных изображений $s_1, s_2$. \\
-	\begin{figure}
-		\centering{\includegraphics[width=0.6\linewidth]{p2p-gen}}
-		\caption{Вход и желаемый выход нейросети}
-	\end{figure}
+	Для решения задачи было попробовано применить модификацию GAN-сети под названием "pix2pix GAN". Ее отличие от схемы GAN, введенной ранее, состоит в том, что вместо шума на вход генератору приходят другие изображения, на которых он основывается при синтезе.
+	\begin{columns}
+		\column{0.5\linewidth}
+			\begin{figure}
+				\centering{\includegraphics[width=1.0\linewidth]{p2p}}
+				\caption{Схематическое устройство сети pix2pix GAN.}
+				\label{p2p}
+			\end{figure}
+		\column{0.5\linewidth}
+			\begin{figure}
+				\centering{\includegraphics[width=1.0\linewidth]{p2p-gen}}
+				\caption{Вход и желаемый выход нейросети-генератора.}
+				\label{p2p-gen}
+			\end{figure}
+	\end{columns}
 \end{frame}
 
 \begin{frame}\frametitle{Критерий качества}
@@ -221,13 +227,13 @@
 					\centering{\includegraphics[width=0.75\linewidth]{nf32_woUnet} \\ nf32-woUnet}
 				\end{minipage}
 		\end{columns}
-		\caption{Примеры сгенерированных текстур}
+		\caption{Примеры сгенерированных текстур.}
 	\end{figure}
 \end{frame}
 
 \begin{frame}\frametitle{Результаты}
 	Для сгенерированных наборов текстур получились следующие результаты:
-	\includegraphics[width=0.95\linewidth,height=0.5\textwidth]{tr_1}
+	\includegraphics[width=0.95\linewidth,height=0.4\textwidth]{tr_1}
 	\begin{table}[h]
 		\begin{tabular}{|c|c|}
 			\hline
@@ -240,11 +246,12 @@
 			nf32-woUnet & 0.00688\\
 			\hline
 		\end{tabular}
+		\caption{Значения введенной метрики для разных сетей (меньше - лучше)}
 	\end{table}
 \end{frame}
 
 \begin{frame}\frametitle{Результаты}
-	\includegraphics[width=0.95\linewidth,height=0.5\textwidth]{tr_2}
+	\includegraphics[width=0.95\linewidth,height=0.4\textwidth]{tr_2}
 	\begin{table}[h]
 		\begin{tabular}{|c|c|}
 			\hline
@@ -257,10 +264,17 @@
 			nf16-3x3-woUnet & 0.01034\\
 			\hline
 		\end{tabular}
+		\caption{Значения введенной метрики для разных сетей (меньше - лучше)}
 	\end{table}
 \end{frame}
 
 \begin{frame}\frametitle{Заключение}
+	В работе было:
+	\begin{itemize}
+		\item Исследовано применение архитектуры GAN для синтеза текстур с трендами
+		\item Получены результаты синтеза при нескольких наборах гиперпараметров сети
+		\item Проведено измерение качества генерации для каждого из наборов, используя введенную метрику
+	\end{itemize}
 	Полученные результаты показывают, что в принципе нейросеть способна уловить тренд и воспроизвести его, однако на данный момент качество генерации относительно невысоко. Необходимо провести дальнешее исследование оптимальных гиперпараметров, и, возможно, увеличить объем обучающей выборки. Также можно провести аналогичные эксперименты с другими архитектурами генераторов.
 \end{frame}
 
