--- a/text/Universiade/presentation.tex
+++ b/text/Universiade/presentation.tex
@@ -1,4 +1,4 @@
-\documentclass[9pt]{beamer}
+\documentclass[12pt]{beamer}
 
 \usepackage{amssymb,amsmath,mathtext}
 \usepackage{indentfirst,amsfonts}
@@ -31,9 +31,9 @@
 \maketitle
 
 \begin{frame}\frametitle{Введение}
-	Цель работы состоит в построении процедуры синтеза изображений среды, которые будут содержать в себе тренд. Под текстурой с трендом понимается изображение, в котором есть изменение некоторой статистической характеристики вдоль одного из направлений. Такими характеристиками, например, могут быть изменение интенсивности появления частиц среды или изменение пористости среды. \\
+	Цель работы состоит в построении процедуры синтеза изображений среды, которые будут содержать в себе тренд. Под текстурой с трендом понимается изображение, в котором есть изменение некоторой характеристики вдоль одного из направлений. Такими характеристиками, например, могут быть изменение интенсивности появления частиц среды или изменение пористости среды. \\
 	\begin{figure}
-		\centering{\includegraphics[width=0.35\linewidth]{trend-sample}}
+		\centering{\includegraphics[width=0.3\linewidth]{trend-sample}}
 		\caption{Пример текстуры с трендом интенсивности частиц.}
 		\label{trend-example}
 	\end{figure}
@@ -73,7 +73,7 @@
 	\end{itemize}
 	Этот подход приводит к проблемам:
 	\begin{itemize}
-		\item Пространство параметров $\theta$ может быть огромной размерности
+		\item Пространство $\theta$ может быть огромной размерности
 		\item Известной параметрической модели распределения может вообще не существовать
 	\end{itemize}
 	Простой пример - синтез человеческих лиц: с помощью классического подхода эта задача не была решена с хорошим качеством.
@@ -143,16 +143,14 @@
 	Таким образом, процесс обучения сети типа GAN принимает следующий вид:
 	\begin{columns}
 		\column{0.5\linewidth}
-			\begin{center}
-				\begin{itemize}
-					\item Обучаем дискриминатор при фиксированном генераторе
-					\item Обучаем генератор при фиксированном дискриминаторе
-					\item Повторяем до сходимости параметров обеих моделей
-				\end{itemize}
-			\end{center}
+			\begin{itemize}
+				\item Обучаем дискриминатор при фиксированном генераторе
+				\item Обучаем генератор при фиксированном дискриминаторе
+				\item Повторяем до сходимости параметров обеих моделей
+			\end{itemize}
 		\column{0.5\linewidth}
 			\begin{figure}
-				\centering{\includegraphics[width=0.85\linewidth]{gan-training}}
+				\centering{\includegraphics[width=0.65\linewidth]{gan-training}}
 				\caption{Схематическое изображение процесса обучения GAN.}
 				\label{gan-train}
 			\end{figure}
@@ -164,7 +162,7 @@
 	\begin{columns}
 		\column{0.5\linewidth}
 			\begin{figure}
-				\centering{\includegraphics[width=1.0\linewidth]{p2p}}
+				\centering{\includegraphics[width=0.85\linewidth]{p2p}}
 				\caption{Схематическое устройство сети pix2pix GAN.}
 				\label{p2p}
 			\end{figure}
@@ -177,54 +175,59 @@
 	\end{columns}
 \end{frame}
 
+\begin{frame}\frametitle{pix2pix GAN}
+	\begin{figure}
+		\includegraphics[width=1.0\linewidth]{unet-scheme}
+		\caption{Схематическое изображение нейросети-генератора.}
+	\end{figure}
+\end{frame}
+
 \begin{frame}\frametitle{Критерий качества}
-	После обучения генератора, необходимо проверить, что сгенерированные им изображения действительно имеют искомые характеристики. Для этого нужно ввести специальную метрику, которая будет учитывать наличие в изображении тренда интенсивности частиц. Было решено использовать среднюю плотность черных пикселей в некотором окне, и проходить этим окном по изображению:
+	После обучения генератора, необходимо проверить, что сгенерированные им изображения действительно имеют искомые характеристики. Было решено использовать среднюю плотность черных пикселей в некотором окне, и проходить этим окном по изображению:
 	\begin{columns}
 		\column{0.5\linewidth}
-			\begin{center}
-				$$\xi_k = \frac{1}{H w}{\sum_{i=k}^{k+w} \sum_{j=0}^{H}\left| \frac{x(i, j) - 255}{255} \right|}, $$$$k = \overline{1, W - w + 1} $$
-			\end{center}
-			Построив график $\xi(k)$ можно увидеть, как меняется плотность пикселей и прослеживается ли тренд. В качестве метрики можно взять среднеквадратичную ошибку:
+			$$\xi_k = \frac{1}{H w}{\sum_{i=k}^{k+w} \sum_{j=0}^{H}\left| \frac{x(i, j) - 255}{255} \right|}, $$$$k = \overline{1, W - w + 1} $$
 		\column{0.4\linewidth}
 			\begin{figure}
-				\centering{\includegraphics[width=0.9\linewidth]{metrics} }
+				\centering{\includegraphics[width=0.7\linewidth]{metrics}}
+				\caption{Прохождение окном по изображению}
 			\end{figure}
-	\end{columns}
-	\begin{columns}
-		\column{0.5\linewidth}
-			$$ \xi = \frac{1}{W-w}\sum_{k=1}^{W-w+1} (\xi_k - \xi_{0k})^2,$$
-		\column{0.5\linewidth}
-			где $\xi_{0k}$ - $\xi_k$, усредненное по примерам из обучающей выборки.
 	\end{columns}
 \end{frame}
 
+\begin{frame}\frametitle{Критерий качества}
+	Построив график $\xi(k)$ можно увидеть, как меняется плотность пикселей и прослеживается ли тренд. В качестве метрики можно взять среднеквадратичную ошибку:
+	$$ \xi = \frac{1}{W-w}\sum_{k=1}^{W-w+1} (\xi_k - \xi_{0k})^2,$$
+	где $\xi_{0k}$ - $\xi_k$, усредненное по примерам из обучающей выборки.
+\end{frame}
+
 \begin{frame}\frametitle{Результаты}
-	Было проведено обучение нейросети описанной архитектуры при различных гиперпараметрах. Обучающей выборкой был массив из 3500 троек изображений.
+	Было проведено обучение нейросети описанной архитектуры при различных гиперпараметрах (в частности, количестве фильтров на первом сверточном слое). Обучающей выборкой был массив из 3500 троек изображений.
 	\begin{figure}
 		\begin{columns}
 			\column{0.33\linewidth}
 				\begin{minipage}{1\linewidth}
-					\centering{\includegraphics[width=0.75\linewidth]{nf8} \\ nf8}
+					\centering{\includegraphics[width=0.5\linewidth]{nf8} \\ nf8}
 				\end{minipage}
 				\vfill
 				\begin{minipage}{1\linewidth}
-					\centering{\includegraphics[width=0.75\linewidth]{nf16} \\ nf16}
+					\centering{\includegraphics[width=0.5\linewidth]{nf16} \\ nf16}
 				\end{minipage}
 			\column{0.33\linewidth}
 				\begin{minipage}{1\linewidth}
-					\centering{\includegraphics[width=0.75\linewidth]{nf16_woUnet} \\ nf16-woUnet}
+					\centering{\includegraphics[width=0.5\linewidth]{nf16_woUnet} \\ nf16-woUnet}
 				\end{minipage}
 				\vfill
 				\begin{minipage}{1\linewidth}
-					\centering{\includegraphics[width=0.75\linewidth]{nf16_3x3_woUnet} \\ nf16-3x3-woUnet}
+					\centering{\includegraphics[width=0.5\linewidth]{nf16_3x3_woUnet} \\ nf16-3x3-woUnet}
 				\end{minipage}
 			\column{0.33\linewidth}
 				\begin{minipage}{1\linewidth}
-					\centering{\includegraphics[width=0.75\linewidth]{nf32} \\ nf32}
+					\centering{\includegraphics[width=0.5\linewidth]{nf32} \\ nf32}
 				\end{minipage}
 				\vfill
 				\begin{minipage}{1\linewidth}
-					\centering{\includegraphics[width=0.75\linewidth]{nf32_woUnet} \\ nf32-woUnet}
+					\centering{\includegraphics[width=0.5\linewidth]{nf32_woUnet} \\ nf32-woUnet}
 				\end{minipage}
 		\end{columns}
 		\caption{Примеры сгенерированных текстур.}
@@ -233,7 +236,7 @@
 
 \begin{frame}\frametitle{Результаты}
 	Для сгенерированных наборов текстур получились следующие результаты:
-	\includegraphics[width=0.95\linewidth,height=0.4\textwidth]{tr_1}
+	\includegraphics[width=0.9\linewidth,height=0.3\textwidth]{tr_1}
 	\begin{table}[h]
 		\begin{tabular}{|c|c|}
 			\hline
@@ -251,7 +254,7 @@
 \end{frame}
 
 \begin{frame}\frametitle{Результаты}
-	\includegraphics[width=0.95\linewidth,height=0.4\textwidth]{tr_2}
+	\includegraphics[width=0.9\linewidth,height=0.3\textwidth]{tr_2}
 	\begin{table}[h]
 		\begin{tabular}{|c|c|}
 			\hline
@@ -276,6 +279,15 @@
 		\item Проведено измерение качества генерации для каждого из наборов, используя введенную метрику
 	\end{itemize}
 	Полученные результаты показывают, что в принципе нейросеть способна уловить тренд и воспроизвести его, однако на данный момент качество генерации относительно невысоко. Необходимо провести дальнешее исследование оптимальных гиперпараметров, и, возможно, увеличить объем обучающей выборки. Также можно провести аналогичные эксперименты с другими архитектурами генераторов.
+\end{frame}
+
+\begin{frame}\frametitle{Список использованных источников}
+	\begin{thebibliography}{99}
+		\bibitem{Voron-ML}  Воронцов К. В., "Математические методы обучения по прецедентам (теория обучения машин)".
+		\bibitem{GAN} Ian J. Goodfellow, Jean Pouget-Abadie, Mehdi Mirza, Bign Xu, David Warde-Farley, Sherjil Ozair, Aaron Courville, Yoshua Bengio, "Generative Adversarial Nets" // arXiv: 1406.2661 [stat.ML], 2014
+		\bibitem{GAN-2} Goodfellow, Ian, et al. "Generative adversarial nets. Advances in neural information processing systems". 2014
+		\bibitem{p2p} Pedro Costa, Adrian Galdran, Maria Inês Meyer, Michael David Abràmoff, Meindert Niemeijer, Ana Maria Mendonça, Aurélio Campilho, "Towards Adversarial Retinal Image Synthesis" // arXiv: 1701.08974 [cs.CV], 2017	
+	\end{thebibliography}
 \end{frame}
 
 \end{document}
