--- a/text/Universiade/universiade.tex
+++ b/text/Universiade/universiade.tex
@@ -84,8 +84,8 @@
 		\begin{itemize}
 			\item Это монохромные изображения 256 x 256 пикселей
 			\item Изменяющимся свойством является интенсивность появления частиц $\lambda$
-			\item Тренд является линейным и направлен вдоль оси x: 
-			$ \lambda = \lambda_0 + kx $
+			\item Тренд является линейным и направлен вдоль оси изображения $z_1$: 
+			$ \lambda = \lambda_0 + k z_1 $
 		\end{itemize}
 	\section{Существующие подходы к синтезу}
 		Есть несколько подходов к решению задачи подобного рода:
