--- a/text/Universiade/presentation.tex
+++ b/text/Universiade/presentation.tex
@@ -49,8 +49,8 @@
 	\begin{itemize}
 		\item Это монохромные изображения 256 x 256 пикселей
 		\item Изменяющимся свойством является интенсивность появления частиц $\lambda$
-		\item Тренд является линейным и направлен вдоль оси x: 
-		$ \lambda = \lambda_0 + kx $
+		\item Тренд является линейным и направлен вдоль оси изображения $z_1$: 
+		$ \lambda = \lambda_0 + kz_1 $
 	\end{itemize}
 \end{frame}
 
